Fix position of the Calligra logo based on height of the main menu

BUG:340767
FIXED-IN:2.8.7
REVIEW:121088